@@ -1,3 +1,14 @@
+2004-12-20  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-agent.el (gnus-agent-group-path): Decode group name.
+	(gnus-agent-group-pathname): Ditto.
+
+	* gnus-cache.el (gnus-cache-file-name): Decode group name.
+
+	* gnus-group.el (gnus-group-make-group): Decode group name.
+	(gnus-group-make-rss-group): Register the group data after opening
+	the nnrss group.
+
 2004-12-17  Paul Jarc  <prj@po.cwru.edu>
 
 	* nnmaildir.el (nnmaildir-request-expire-articles): Articles moved
